<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="app_name">吸费克星</string>
	<string name="app_name_request">授权请求</string>
	<string name="permlab_respond">响应最高权限请求</string>
	<string name="permdesc_respond">允许应用程序响应最高权限访问请求。</string>
	<string name="new_su">su 的新版本</string>
	<string name="new_su_msg">su 程序有新的版本。点击“确定”来尝试自动安装它。</string>
	<string name="su_updated">su 程序更新成功</string>
	<string name="su_not_updated_title">自动更新失败</string>
	<string name="su_not_updated">有错误发生，su 程序更新失败。请重启你的手机进入恢复 (recovery) 模式，应用更新
		(apply update) su-2.3.1-bin-signed.zip 来升级 su 程序。</string>
	<string name="su_up_to_date">su 程序已是最新版本</string>
	<string name="checking">正在查找…</string>
	<string name="no_connection">没有可用的网络连接。无法查找更新</string>
	<string name="manifest_download_failed">查找可用更新失败</string>
	<string name="su_original">原始</string>
	<string name="warning">警告</string>
	<string name="malicious_app_notification_ticker">发现疑似恶意程序</string>
	<string name="malicious_app_notification_text" formatted="false">%s
		可能是恶意程序。</string>
	<string name="uninstall">卸载</string>
	<string name="uninstall_successful">卸载完成</string>
	<string name="report_msg">你想要将该软件包上报给授权管理的开发人员分析吗？</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="report_subject">Possibly malicious app found / 发现疑似恶意程序</string>
	<string name="tab_apps">程序</string>
	<string name="tab_log">日志</string>
	<string name="tab_settings">设置</string>
	<string name="allow">允许</string>
	<string name="forget">忘记</string>
	<string name="cancel">取消</string>
	<string name="deny">拒绝</string>
	<string name="remember">记住</string>
	<string name="unknown">未知名称</string>
	<string name="allowed">被允许</string>
	<string name="denied">被拒绝</string>
	<string name="created">被创建</string>
	<string name="toggled">被切换</string>
	<string name="no_log_data">无日志记录</string>
	<string name="last_allowed">上次允许:</string>
	<string name="last_denied">上次拒绝:</string>
	<string name="empty_apps">无程序条目</string>
	<string name="empty_logs">无日志条目</string>
	<string name="detail_package">包名:</string>
	<string name="detail_request">类型:</string>
	<string name="detail_command">号码:</string>
	<string name="detail_status">状态:</string>
	<string name="detail_created">创建于:</string>
	<string name="detail_last_accessed">上次访问:</string>
	<string name="request_message">下列程序请求权限访问：</string>
	<string name="request_app_name">程序:</string>
	<string name="preferences">首选项</string>
	<string name="pref_category_whitelist_title">程序列表</string>
	<string name="pref_tap_action_title">点击时的操作</string>
	<string name="pref_tap_action_summary">点击条目时执行的操作</string>
	<string name="pref_show_status_icons_title">显示状态图标</string>
	<string name="pref_show_status_icons_summary_on">显示程序状态图标</string>
	<string name="pref_show_status_icons_summary_off">不显示程序状态图标</string>
	<string name="pref_status_icon_type_title">状态图标类型</string>
	<string name="pref_status_icon_type_summary">显示的状态图标的式样</string>
	<string name="pref_category_log_title">日志</string>
	<string name="pref_date_format_title">选择日期格式</string>
	<string name="pref_24_hour_title">使用 24 小时格式</string>
	<string name="pref_show_seconds_title">显示秒</string>
	<string name="pref_clear_log">清除日志</string>
	<string name="pref_category_notification_title">通知</string>
	<string name="pref_notifications_title">通知</string>
	<string name="pref_notifications_summary_on">当程序被授予最高权限时显示通知</string>
	<string name="pref_notifications_summary_off">当程序被授予最高权限时不显示通知</string>
	<string name="pref_notification_title">通知方式</string>
	<string name="pref_notification_summary">当程序被授予最高权限时显示通知的类型</string>
	<string name="pref_category_info_title">关于 Superuser</string>
	<string name="pref_bin_version_summary">点击这里查找更新</string>
	<string name="log_app_name">应用:</string>
	<string name="log_package_name">包名:</string>
	<string name="log_dial_date">日期:</string>
	<string name="log_dial_phone_num">号码:</string>
	<string name="log_dial_status">状态:</string>
	<string name="log_dial_content">内容:</string>
</resources>